Alterando estilização do index

--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>AquaTech | Página Inicial</title>
+    <title>YourTricks | Página Inicial</title>
 
     <script src="./js/sessao.js"></script>
 
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
+
+    <link rel="icon" href="./assets/icon/logoSite.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
     <div class="header">
       <div class="container">
-        <h1 class="titulo">AquaTech</h1>
+        <h1 class="titulo">YourTricks</h1>
         <ul class="navbar">
           <li class="agora">
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a href="simulador.html">Simulador</a>
+            <a onclick="validarSessao()">Quiz</a>
           </li>
           <li>|</li>
           <li>
@@ -39,7 +40,7 @@
   
     <div class="banner">
       <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
+        <p>Incentivando <span>hoje</span> para se criar skatistas <span>amanhã</span>.</p>
       </div>
     </div>
   
@@ -49,16 +50,14 @@
           <div class="box">
             <img src="assets/imgs/planet-earth_color.png">
             <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
+            <p>Incentivar o movimento do Skate no Brasil, incentivando cada vez mais furar a bolha do mundo do skate e 
+              assim atrair mais pessoas para o movimente</p>
           </div>
           <div class="box">
             <img src="assets/imgs/lightbulb_color.png">
             <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
+            <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como um distração
+              e momento de lazer</p>
           </div>
           <div class="box">
             <img src="assets/imgs/growth_color.png">
