--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="boxes">
           <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
+            <img src="./assets/imgs/sobreNos/missao.png">
             <h4>Missão</h4>
             <p>Incentivar o movimento do Skate no Brasil, incentivando cada vez mais furar a bolha do mundo do skate e 
               assim atrair mais pessoas para o movimente</p>
@@ -56,15 +56,15 @@
           <div class="box">
             <img src="assets/imgs/lightbulb_color.png">
             <h4>Visão</h4>
-            <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como um distração
+            <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como uma distração
               e momento de lazer</p>
           </div>
           <div class="box">
-            <img src="assets/imgs/growth_color.png">
+            <img src="assets/imgs/sobreNos/valores.png">
+            <h4>............................</h4>
             <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
+            <p>Promover um ambiente acolhedor e acessível a todos, independente de idade, também desenvolver uma maior igualdade e 
+            respeito dentro da comunidade do skate.</p>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
   
     <div class="footer">
       <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+        <h4>Desenvolvido por Raul Gomes Reis - 1CCOA SPTech &copy; 2024</h4>
         <span class="version">v1.0.0</span>
       </div>
     </div>
