Conexão de anotações e desing da dashboard

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -26,10 +26,6 @@
           <a href="index.html">Inicial</a>
         </li>
         <li>
-          <a href="simulador.html">Simulador</a>
-        </li>
-        <li>|</li>
-        <li>
           <a href="login.html">Login</a>
         </li>
         <li class="agora">
@@ -84,7 +80,7 @@
   <!--footer inicio-->
   <div class="footer">
     <div class="container">
-      <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+      <h4>Desenvolvido por Raul Gomes Reis - 1CCOA SPTech &copy; 2024</h4>
       <span class="version">v1.0.0</span>
     </div>
   </div>
@@ -146,7 +142,7 @@
             window.location = "login.html";
           }, "2000");
 
-          limparFormulario();
+          // limparFormulario();
           // finalizarAguardar();
         } else {
           throw "Houve um erro ao tentar realizar o cadastro!";
