--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -40,19 +40,19 @@
 
             <div class="btn-nav-white">
                 <a href="./cards.html">
-                    <h3>Aquários</h3>
+                    <h3>Seus dados</h3>
                 </a>
             </div>
 
             <div class="btn-nav">
 
-                <h3>Gráficos</h3>
+                <h3>Histórico</h3>
 
             </div>
 
             <div class="btn-nav-white">
                 <a href="./mural.html">
-                    <h3>Mural de Avisos</h3>
+                    <h3>Suas manobras</h3>
                 </a>
             </div>
 
