--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a onclick="validarSessao()">Quiz</a>
+            <a onclick="valid()">Quiz</a>
           </li>
           <li>|</li>
           <li>
@@ -79,3 +79,12 @@
   </body>
 
 </html>
+
+<script>
+  function valid(){
+    alert('Faça seu login ou cadastro primeiro');
+    setTimeout(()=>{
+      window.location.href = './login.html'
+    }, 1000);
+  }
+</script>
