--- a/public/login.html
+++ b/public/login.html
@@ -26,10 +26,6 @@
                 <li>
                     <a href="index.html">Inicial</a>
                 </li>
-                <li>
-                    <a href="simulador.html">Simulador</a>
-                </li>
-                <li>|</li>
                 <li class="agora">
                     <a href="#">Login</a>
                 </li>
@@ -53,11 +49,11 @@
                 <div class="formulario">
                     <div class="campo">
                         <span>E-mail:</span>
-                        <input id="email_input" type="text" placeholder="Login">
+                        <input id="email_input" type="text" placeholder="Login" value="leandro@gmail.com">
                     </div>
                     <div class="campo">
                         <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
+                        <input id="senha_input" type="password" placeholder="******" value="123">
                     </div>
                     <button class="botao" onclick="entrar()">Entrar</button>
                 </div>
@@ -74,7 +70,7 @@
     <!--footer inicio-->
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+            <h4>Desenvolvido por Raul Gomes Reis - 1CCOA SPTech &copy; 2024</h4>
             <span class="version">v1.0.0</span>
         </div>
     </div>
@@ -123,11 +119,12 @@
                 console.log(resposta);
 
                 resposta.json().then(json => {
-                    console.log(json);
+                    // alert('JSON: ' + json.data.nome);
+                    // alert('Nome de usuário' + json.nome);
                     console.log(JSON.stringify(json));
-                    sessionStorage.EMAIL_USUARIO = json.email;
-                    sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.EMAIL_USUARIO = json.data.email;
+                    sessionStorage.NOME_USUARIO = json.data.nome;
+                    sessionStorage.ID_USUARIO = json.data.id;
                     // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
 
                     setTimeout(function () {
