Adicionando página de quiz

--- a/public/dashboard/cards.html
+++ b/public/dashboard/cards.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AquaTech | Tempo Real</title>
+    <title>YourTricks | Dados</title>
 
 
     <link rel="stylesheet" href="./../css/dashboards.css">
@@ -26,7 +26,7 @@
 
         <div class="header-left dash-header">
 
-            <h1>AquaTech</h1>
+            <h1>YourTricks</h1>
 
             <div class="hello">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
@@ -45,6 +45,12 @@
             <div class="btn-nav-white">
                 <a href="./mural.html">
                     <h3>Suas manobras</h3>
+                </a>
+            </div>
+
+            <div class="btn-nav-white">
+                <a href="./mural.html">
+                    <h3>Quiz</h3>
                 </a>
             </div>
 
