Estrutura e estilização quiz

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./mural.html">
+                <a href="./quiz.html">
                     <h3>Quiz</h3>
                 </a>
             </div>
