--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -44,7 +44,7 @@
                 </a>
             </div>
 
-            <div class="btn-nav">
+            <div class="btn-nav-white">
 
                 <h3>Histórico</h3>
 
@@ -56,7 +56,7 @@
                 </a>
             </div>
 
-            <div class="btn-nav-white">
+            <div class="btn-nav">
                 <a href="./mural.html">
                     <h3>Quiz</h3>
                 </a>
@@ -69,14 +69,244 @@
         </div>
 
         <div class="dash">
-            <div id="alerta">
+            <div class="quizContainer">
+                <h1>Teste seus conhecimentos sobre skate!</h1>
+                .
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 1</h2>
+                    <span>Nome popular para fakie 360º de back:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Caballerial
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Half-Cab 360
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            BigSpin
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Half-Cab 360
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 2</h2>
+                    <span>Como se chama a manobra em que o skate gira 360° e o corpo 180°:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Gazelle
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Caballerial
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Double Hellflip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            BigSpin
+                        </label>
+                    </div>
+                </div>
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 3</h2>
+                    <span>Variação de manobra em que se tira um dos pés do skate enquanto o outro permanece:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Varial flip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Cave Ollie
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            No Comply
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Madonna
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 4</h2>
+                    <span>Combinação de varial com hellflip:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Inward Hellflip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Varial Hellflip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Double Hellflip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Big Hellflip
+                        </label>
+                    </div>
+                </div>
+                
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 5</h2>
+                    <span>Manobra em que o skate gira 540° e o corpo 360°:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Bigger BigSpin
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Double HalfCab
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Gazelle
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Double BigSpin
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 6</h2>
+                    <span>Qual o nome da manobra em que se realiza um tail de from na rampa segurando o nose com a mão de trás e tirando a perna da frente:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Steal Fish
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Madonna
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            OllieUp Grind
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Boneless
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 7</h2>
+                    <span>Qual o nome da base em que o pé esquerdo vai na frente (nose):</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Regular
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Goffy
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Padding
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Switch
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 8</h2>
+                    <span>Qual a marca de truck referencia no skate:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Jessup
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Thunder
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Independent
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Stronger
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainer">
+                    <h2 class="marginQuiz">Questão 9</h2>
+                    <span>Nome popular da manobra varial double flip:</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Super Varialflip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                           Nigthmare flip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Inward flip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            BigSpin flip
+                        </label>
+                    </div>
+                </div>
+
+                <div class="questionContainerLast">
+                    <h2 class="marginQuiz">Questão 10</h2>
+                    <span>Nome da manobra em que se gira um 360° dolphin flip</span>
+                    <div class="containerResposta">
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Bigger DolphinFlip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Double DolphinFlip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Nollie Gazelle flip
+                        </label>
+                        <label for="option">
+                            <input type="radio" name="option" id="qst1">
+                            Dragon flip
+                        </label>
+                    </div>
+                </div>
+
+
+                <div class="sendQuiz">
+                    <button>Enviar resposta</button>
+                </div>
             </div>
 
-            <div class="btns-dash" id="btnAquario">
-                <!-- O gráfico é chamado de acordo com o id (fk_aquario) do banco  -->
-            </div>
-            <div id="graficos">
-            </div>
         </div>
     </div>
 
