--- a/public/dashboard/cards.html
+++ b/public/dashboard/cards.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./mural.html">
+                <a href="./quiz.html">
                     <h3>Quiz</h3>
                 </a>
             </div>
