Adicionando requisição(fetch) no quiz

--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -77,19 +77,19 @@
                     <span>Nome popular para fakie 360º de back:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Caballerial
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Half-Cab 360
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             BigSpin
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Half-Cab 360
                         </label>
                     </div>
@@ -100,19 +100,19 @@
                     <span>Como se chama a manobra em que o skate gira 360° e o corpo 180°:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Gazelle
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Caballerial
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Double Hellflip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             BigSpin
                         </label>
                     </div>
@@ -122,19 +122,19 @@
                     <span>Variação de manobra em que se tira um dos pés do skate enquanto o outro permanece:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Varial flip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Cave Ollie
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             No Comply
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Madonna
                         </label>
                     </div>
@@ -145,19 +145,19 @@
                     <span>Combinação de varial com hellflip:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Inward Hellflip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Varial Hellflip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Double Hellflip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Big Hellflip
                         </label>
                     </div>
@@ -168,19 +168,19 @@
                     <span>Manobra em que o skate gira 540° e o corpo 360°:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Bigger BigSpin
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Double HalfCab
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Gazelle
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Double BigSpin
                         </label>
                     </div>
@@ -191,19 +191,19 @@
                     <span>Qual o nome da manobra em que se realiza um tail de from na rampa segurando o nose com a mão de trás e tirando a perna da frente:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Steal Fish
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Madonna
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             OllieUp Grind
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Boneless
                         </label>
                     </div>
@@ -214,19 +214,19 @@
                     <span>Qual o nome da base em que o pé esquerdo vai na frente (nose):</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Regular
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Goffy
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Padding
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Switch
                         </label>
                     </div>
@@ -237,19 +237,19 @@
                     <span>Qual a marca de truck referencia no skate:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Jessup
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Thunder
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Independent
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Stronger
                         </label>
                     </div>
@@ -260,19 +260,19 @@
                     <span>Nome popular da manobra varial double flip:</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Super Varialflip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                            Nigthmare flip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Inward flip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             BigSpin flip
                         </label>
                     </div>
@@ -283,19 +283,19 @@
                     <span>Nome da manobra em que se gira um 360° dolphin flip</span>
                     <div class="containerResposta">
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Bigger DolphinFlip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Double DolphinFlip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="0">
                             Nollie Gazelle flip
                         </label>
                         <label for="option">
-                            <input type="radio" name="option" id="qst1">
+                            <input type="radio" name="option" class="radioCont" value="1">
                             Dragon flip
                         </label>
                     </div>
@@ -303,7 +303,7 @@
 
 
                 <div class="sendQuiz">
-                    <button>Enviar resposta</button>
+                    <button onclick="sendResponse()">Enviar resposta</button>
                 </div>
             </div>
 
@@ -316,4 +316,34 @@
 </html>
 
 <script>
+    function sendResponse(){
+        var pontuacao = document.querySelectorAll('.radioCont');
+        var total = 0;
+
+        for (let i = 0; i < pontuacao.length; i++) {
+            if(pontuacao.cheked){
+                total += Number(pontuacao.value)
+            }
+        }
+
+        alert(`total: ${total}`)
+        
+        
+        // fetch('/quiz/cadastrar', {
+        //     method: 'POST',
+        //     headers: {
+        //         'Content-Type': 'application/json'
+        //     },
+        //     body: JSON.stringify({
+        //         idUserServer: sessionStorage.ID_USUARIO,
+        //         pontuacaoServer: pontuacao
+        //     })
+        // }).then(response => {
+        //     if(response.status == 200){
+        //         alert(`Pontuação pública pelo usuário: ${sessionStorage.ID_USUARIO}\n Pontuação: ${pontuacao}`)
+        //     }
+        // }).catch(response =>{
+        //     alert(response.erro)
+        // });
+    }
 </script>
